@@ -1,0 +1,32 @@
+#!/bin/sh
+
+# @GENERATED_SCRIPT_FILE_WARNING@
+
+# build_debs.sh
+#
+#  Build Debian packages.
+#
+#   (C) Copyright 2021-2022 Fred Gleason <fredg@paravelsystems.com>
+#
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License version 2 as
+#   published by the Free Software Foundation.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public
+#   License along with this program; if not, write to the Free Software
+#   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+#
+
+tar -zvxf switchyard5-@VERSION@.tar.gz
+mv switchyard5-@VERSION@.tar.gz switchyard5_@VERSION@.orig.tar.gz
+
+cd switchyard5-@VERSION@
+dpkg-buildpackage -us -uc
+cd ..
+
+rm -rf switchyard5-@VERSION@
