@@ -1,0 +1,5 @@
+switchyard5 (@VERSION@-1) unstable; urgency=medium
+
+  * Beta release (see ChangeLog for details)
+
+ -- Fred Gleason <fredg@paravelsystems.com>  @DATESTAMP@
